--- a/client/src/app/page/layout/profile/profile.component.scss
+++ b/client/src/app/page/layout/profile/profile.component.scss
@@ -10,11 +10,8 @@
         width: 60%;
         height: 600px;
         text-align: start;
-        
-        .tui-table__th {
-            background-color: rgb(31, 31, 31);
-            font-size: 20px;
-            color: #ffffff;
+        .input-client {
+            margin: 1rem;
         }
     }
 }
