--- a/client/src/app/page/layout/create-profile/create-profile.component.scss
+++ b/client/src/app/page/layout/create-profile/create-profile.component.scss
@@ -1,3 +1,25 @@
+// .container {
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     text-align: center;
+//     justify-content: center;
+//     align-items: center;
+//     .container_main {
+//         display: flex;
+//         width: 60%;
+//         height: 600px;
+//         text-align: start;
+//         border: solid 1px #000000;
+//         .create {
+//             width: 100%;
+//         }
+//         .input-client {
+//             margin: 1rem;
+//         }
+//     }
+// }
 .container {
     width: 100%;
     height: 100%;
@@ -7,16 +29,14 @@
     justify-content: center;
     align-items: center;
     .container_main {
-        display: flex;
         width: 60%;
         height: 600px;
         text-align: start;
-        border: solid 1px #000000;
-        .create {
-            width: 100%;
-        }
-        .input-client {
-            margin: 1rem;
+        
+        .tui-table__th {
+            background-color: rgb(31, 31, 31);
+            font-size: 20px;
+            color: #ffffff;
         }
     }
 }
